--- a/servicio-hoteles-dev.properties
+++ b/servicio-hoteles-dev.properties
@@ -4,7 +4,7 @@ configuracion.texto =Configurando ambiente Produccion
 
 spring.datasource.url = jdbc:mysql://localhost:3306/aerolineas_alpakalines
 spring.datasource.username = root
-spring.datasource.password = Cesarandia28?
+spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.type=TRACE
 spring.jackson.time-zone =America/Lima
