--- a/servicio-hoteles-dev.properties
+++ b/servicio-hoteles-dev.properties
@@ -2,10 +2,10 @@ server.port=8002
 
 configuracion.texto =Configurando ambiente Produccion
 
-spring.datasource.url = jdbc:mysql://localhost:3306/aerolineas_alpakalines
-spring.datasource.username = root
-spring.datasource.password = Cesarandia28?
-spring.jpa.hibernate.ddl-auto = update
-logging.level.org.hibernate.type=TRACE
-spring.jackson.time-zone =America/Lima
-spring.jackson.locale=es_PE
+spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
