--- a/servicio-vuelos-dev.properties
+++ b/servicio-vuelos-dev.properties
@@ -1,6 +1,4 @@
-server.port=8001
-
-configuracion.texto =Configurando ambiente Produccion
+server.port=8005
 
 spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud
 spring.datasource.username=root
@@ -9,3 +7,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jackson.time-zone =America/Lima
+spring.jackson.locale=es_PE
